--- a/front/src/App.css
+++ b/front/src/App.css
@@ -10,7 +10,9 @@
   top: 0;
   z-index: -1;
   display: block;
+  height: 100%;
   background-image: url(./assets/better_banner_bckg_2.png);
+  background-size: cover;
   width: 100%;
   height: 100%;
   -webkit-filter: blur(12px);
